--- a/NFT_wallet_extractor/index.html
+++ b/NFT_wallet_extractor/index.html
@@ -23,7 +23,7 @@
         <div class="text-center mb-6">
           <h1 class="text-3xl font-bold text-gray-800">NFT Data Fetcher</h1>
           <p class="text-gray-500 mt-2">
-            Find all NFTs for an artist on the Ethereum blockchain.
+            Find all NFTs for a wallet on various blockchains.
           </p>
         </div>
 
@@ -46,7 +46,7 @@
               to get a free key.
             </li>
             <li>
-              Paste your key into the "OpenSea API Key" input field below.
+              Select a blockchain, enter the wallet address and your API key.
             </li>
             <li>
               Click "Fetch NFTs" to begin. The data will appear in the table.
@@ -55,7 +55,7 @@
         </div>
 
         <!-- Input Fields -->
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mt-6">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-6">
           <div>
             <label
               for="apiKey"
@@ -73,14 +73,33 @@
             <label
               for="artistAddress"
               class="block text-sm font-medium text-gray-700 mb-1"
-              >Artist Wallet Address</label
+              >Wallet Address</label
             >
             <input
               type="text"
               id="artistAddress"
-              placeholder="Enter Ethereum wallet address"
+              placeholder="Enter wallet address"
               class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-indigo-500 focus:border-indigo-500"
             />
+          </div>
+          <div>
+            <label
+              for="chainSelector"
+              class="block text-sm font-medium text-gray-700 mb-1"
+              >Blockchain</label
+            >
+            <select
+              id="chainSelector"
+              class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:ring-indigo-500 focus:border-indigo-500 bg-white"
+            >
+              <option value="ethereum" selected>Ethereum</option>
+              <option value="matic">Polygon</option>
+              <option value="arbitrum">Arbitrum</option>
+              <option value="optimism">Optimism</option>
+              <option value="solana">Solana</option>
+              <option value="klaytn">Klaytn</option>
+              <option value="base">Base</option>
+            </select>
           </div>
         </div>
 
@@ -195,6 +214,7 @@
         // --- DOM Element References ---
         const apiKeyInput = document.getElementById("apiKey");
         const artistAddressInput = document.getElementById("artistAddress");
+        const chainSelector = document.getElementById("chainSelector");
         const fetchButton = document.getElementById("fetchButton");
         const downloadButton = document.getElementById("downloadButton");
         const statusContainer = document.getElementById("statusContainer");
@@ -287,13 +307,14 @@
         async function fetchAllNfts() {
           const apiKey = apiKeyInput.value;
           const artistAddress = artistAddressInput.value;
+          const selectedChain = chainSelector.value;
 
           if (!apiKey) {
             showError("Please provide an OpenSea API key.");
             return;
           }
           if (!artistAddress) {
-            showError("Please provide an artist's wallet address.");
+            showError("Please provide a wallet address.");
             return;
           }
 
@@ -309,7 +330,7 @@
           try {
             let keepFetching = true;
             while (keepFetching) {
-              const url = `${OPENSEA_API_BASE_URL}/chain/ethereum/account/${artistAddress}/nfts?limit=50${
+              const url = `${OPENSEA_API_BASE_URL}/chain/${selectedChain}/account/${artistAddress}/nfts?limit=50${
                 nextCursor ? `&next=${nextCursor}` : ""
               }`;
 
@@ -355,7 +376,7 @@
             );
             if (allNfts.length === 0) {
               showError(
-                "No NFTs found for this address. It's possible the wallet holds no NFTs or the API is temporarily unavailable."
+                "No NFTs found for this address on the selected chain. It's possible the wallet holds no NFTs or the API is temporarily unavailable."
               );
             }
           } catch (e) {
@@ -377,7 +398,7 @@
             return;
           }
 
-          const headers = ["SmartContractAddress", "TokenID", "CollectionName"];
+          const headers = ["contract_address", "token_id", "CollectionName"];
           const csvContent = [
             headers.join(","),
             ...nfts.map((nft) =>
